--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "forcestop-essentials",
+  "name": "discord.js-example-bot",
   "version": "1.0.0",
-  "description": "My Essentials BOT!",
+  "description": "Example Bot by ForceStop!",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "forcestopgm",
+  "author": "forcestop",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.3.2",
