--- a/app.json
+++ b/app.json
@@ -1,18 +1,58 @@
 {
-  "name": "Discord.js Example Bot",
-  "description": "A Discord.js Example Bot's Repository",
-  "repository": "https://github.com/fschxspam/discord.js-example-bot",
-  "logo": "https://node-js-sample.herokuapp.com/node.png",
-  "keywords": ["node", "heroku", "discord"]
- },
+  "name": "Small Sharp Tool",
+  "description": "This app does one little thing, and does it well.",
+  "keywords": [
+    "productivity",
+    "HTML5",
+    "scalpel"
+  ],
+  "website": "https://small-sharp-tool.com/",
+  "repository": "https://github.com/jane-doe/small-sharp-tool",
+  "logo": "https://small-sharp-tool.com/logo.svg",
+  "success_url": "/welcome",
+  "scripts": {
+    "postdeploy": "bundle exec rake bootstrap"
+  },
   "env": {
-    "BOT_TOKEN": {
-      "description": "A Secret Bot Token, Used To Login The Bot.",
-      "generator": "token"
+    "SECRET_TOKEN": {
+      "description": "A secret key for verifying the integrity of signed cookies.",
+      "generator": "secret"
     },
     "WEB_CONCURRENCY": {
-      "description": "The Token of processes to run.",
+      "description": "The number of processes to run.",
       "value": "5"
+    }
+  },
+  "formation": {
+    "web": {
+      "quantity": 2,
+      "size": "Performance-M"
+    }
+  },
+  "image": "heroku/ruby",
+  "addons": [
+    "openredis",
+    {
+      "plan": "mongolab:shared-single-small",
+      "as": "MONGO"
+    },
+    {
+      "plan": "heroku-postgresql",
+      "options": {
+        "version": "9.5"
+      }
+    }
+  ],
+  "buildpacks": [
+    {
+      "url": "https://github.com/stomita/heroku-buildpack-phantomjs"
+    }
+  ],
+  "environments": {
+    "test": {
+      "scripts": {
+        "test": "bundle exec rake test"
+      }
     }
   }
 }
