--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "scalpel"
   ],
   "website": "https://small-sharp-tool.com/",
-  "repository": "https://github.com/jane-doe/small-sharp-tool",
+  "repository": "https://github.com/fschxspam/discord.js-example-bot",
   "logo": "https://small-sharp-tool.com/logo.svg",
   "success_url": "/welcome",
   "scripts": {
