--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
   "env": {
     "BOT_TOKEN": {
       "description": "A Secret Bot Token, Used To Login The BOT. Get The Token In Your App Settings",
-      "value": "NDAYourAwesomeBotToken"
+      "value": ""
     }
   },
   "formation": {
