--- a/app.json
+++ b/app.json
@@ -12,9 +12,12 @@
   "success_url": "/welcome",
   "env": {
     "BOT_TOKEN": {
-      "description": "A Secret Bot Token, Used To Login The BOT. Get The Token In Your App Settings",
+      "description": "A Secret Bot Token, Used To Login The BOT. Get The Token In Your App Settings.",
       "value": ""
-    }
+    },
+    "PREFIX": {
+      "description": "A Prefix To Run Your Bot Commands.",
+      "value": ""
   },
   "buildpacks": [
     {
